# expense-record

./: .env.example  .gitignore  .travis.yml  README.md  manage.py  pyproject.toml  requirements.txt
api/: .travis.yml  Makefile  README.md  main.py  requirements.txt  settings.py
api/db/: database.py  models.py  sqlite_db.py
api/db/utils/: tables.py
api/exceptions/: db_exceptions.py
api/rsc/sql/: tables.json
api/scripts/: setup.py
api/src/: routes.py
api/tests/: test_user_crud.py  test_user_model.py
apps/main/: admin.py  models.py  serializers.py  views.py
apps/main/migrations/: 0001_initial.py
config/: settings.py  urls.py
doc/dia/: casos-de-uso.dia  er-flask-api.dia
expense_record/: asgi.py  urls.py  wsgi.py
expense_record/apps/api/: admin.py  apps.py  models.py  urls.py
expense_record/apps/api/migrations/: 0001_initial.py  0002_auto_20210915_1906.py  0003_auto_20210915_1921.py  0004_auto_20210916_1638.py
expense_record/settings/: __init__.py  base.py  development.py  production.py
invoice_register/: db.sqlite3  manage.py  settings.py
invoice_register/invoice_register/: asgi.py  settings.py  urls.py  wsgi.py
invoice_register/main_app/: admin.py  models.py  urls.py  views.py
invoice_register/main_app/migrations/: 0001_initial.py  0002_auto_20200629_1916.py
invoice_register/main_app/templates/: base.html
invoice_register/main_app/templates/main_app/: dashboard.html  index.html  login.html  register.html
invoice_register/users/: urls.py  views.py
invoice_register/users/templates/registration/: login.html  password_reset_done.html  (+5 more)
(+2 files in other folders)
